@@ -247,8 +247,8 @@ Output written to standard output is inserted into the final document.
 <%@eval language="R" content="
 ## This utilizes the RSP `eval' preprocessing directive to
 ## translate the example into R code.
-code <- rscript('${doc}');
-code <- tidy(code, format='unsafedemo');
+code <- R.rsp::rscript('${doc}');
+code <- R.rsp::tidy(code, format='unsafedemo');
 "%>
 <%@string name="code"%>
 \end{verbatim}%
